--- a/my-books-api/build.gradle
+++ b/my-books-api/build.gradle
@@ -1,22 +1,17 @@
 plugins {
-	id 'org.springframework.boot' version '2.4.1'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-	id 'org.asciidoctor.convert' version '1.5.8'
-	id 'java'
+	id 'org.springframework.boot' version "$SPRING_BOOT_VERSION"
+	id 'io.spring.dependency-management' version "$SPRING_DEPENDENCY_MANAGEMENT_VERSION"
+	id 'org.asciidoctor.convert' version "$ASCII_DOCTOR_VERSION"
 }
 
-group = 'com.roldan'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '15'
+repositories {
+	mavenCentral()
+}
 
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
-}
-
-repositories {
-	mavenCentral()
 }
 
 ext {
@@ -26,8 +21,8 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	implementation 'io.springfox:springfox-swagger2:2.9.2'
-	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+	implementation "io.springfox:springfox-swagger2:$SPRINGFOX_VERSION"
+	implementation "io.springfox:springfox-swagger-ui:$SPRINGFOX_VERSION"
 
 	compileOnly 'org.projectlombok:lombok'
 
