--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,18 @@ version: '3'
 
 services:
   api:
-    build: my-books-api
+    container_name: my-books-api-dev
+    build:
+      context: api
+      dockerfile: Dockerfile
     ports:
       - "8081:8081"
+  frontend:
+    container_name: my-books-frontend-dev
+    build:
+      context: frontend
+      dockerfile: Dockerfile
+    ports:
+      - 3001:3000
+    environment:
+      - CHOKIDAR_USEPOLLING=true
