--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,10 +2,14 @@ plugins {
 	id 'org.springframework.boot' version "$SPRING_BOOT_VERSION"
 	id 'io.spring.dependency-management' version "$SPRING_DEPENDENCY_MANAGEMENT_VERSION"
 	id 'org.asciidoctor.convert' version "$ASCII_DOCTOR_VERSION"
+	id 'java'
 }
+
+sourceCompatibility = "$JAVA_VERSION"
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
 }
 
 configurations {
@@ -21,6 +25,13 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+
+	implementation "com.sun.jersey:jersey-client:$JERSEY_VERSION"
+	implementation "com.sun.jersey:jersey-core:$JERSEY_VERSION"
+	implementation "com.sun.jersey.contribs:jersey-apache-client4:$JERSEY_VERSION"
+
 	implementation "io.springfox:springfox-swagger2:$SPRINGFOX_VERSION"
 	implementation "io.springfox:springfox-swagger-ui:$SPRINGFOX_VERSION"
 
@@ -30,6 +41,12 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:$SPRING_CLOUD_VERSION"
+	}
 }
 
 test {
