--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -5,3 +5,25 @@ spring:
   mvc:
     async:
       request-timeout: 300
+  application:
+    name: my-books-api
+  profiles:
+    active: local
+
+---
+spring:
+  profiles: local
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+---
+spring:
+  profiles: docker
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka:8761/eureka/
