--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 JAVA_VERSION = 15
 
 SPRING_DEPENDENCY_MANAGEMENT_VERSION = 1.0.10.RELEASE
-SPRING_BOOT_VERSION = 2.4.1
-SPRING_CLOUD_VERSION = 2020.0.0-RC1
+SPRING_BOOT_VERSION = 2.3.7.RELEASE
+SPRING_CLOUD_VERSION = Hoxton.SR9
 
 ASCII_DOCTOR_VERSION = 1.5.8
 SPRINGFOX_VERSION = 2.9.2
