--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -13,10 +13,28 @@ services:
     build:
       context: api
       dockerfile: Dockerfile
+    depends_on:
+      - discovery-service
     ports:
       - "8081:8081"
+    links:
+      - "discovery-service:eureka"
+  api-client:
+    container_name: my_books_api_client_prod
+    build:
+      context: api-client
+      dockerfile: Dockerfile
+    depends_on:
+      - discovery-service
+      - api
+    ports:
+      - "8082:8082"
+    links:
+      - "discovery-service:eureka"
   frontend-prod:
     container_name: my_books_frontend_prod
+    depends_on:
+      - api
     build:
       context: frontend
       dockerfile: Dockerfile.prod
